# AES1

./: .gitignore  README.md  pyproject.toml
doc/: aes1_arquitetura.avif  aes1_capa.avif  aes1_dashboard1.avif  aes1_dashboard2.avif  aes1_modelo_dimensional.avif  aes1_modelo_raw.avif  aes1_pipeline_airflow.avif
docker/: docker-compose.yaml  dockerfile  requirements.txt
src/app/: aes1_dashboard.py
src/app/.streamlit/: config.toml
src/dags/: aes1_pipeline.py
src/dbt_aes1/: .user.yml  dbt_project.yml  profiles.yml
src/dbt_aes1/models/: dim_date.sql  dim_status.sql  dim_users.sql  fact_transactions.sql  sources.yml
src/scripts/: aes1_base_clientes.csv  aes1_gerador_raw.py  aes1_gerar_base_clientes.py  aes1_ingestao_bronze.py  aes1_limpar_datalake.py  aes1_processamento_silver.py
src/utils/: aes1_setup.py
